--- a/DSCI Group 11 project.ipynb
+++ b/DSCI Group 11 project.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "938086ac-ebed-443c-8839-ae31e93bcceb",
+   "metadata": {},
+   "source": [
+    "## Introduction\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "f8b9733d-71f0-409c-b81d-12b2c4008ef1",
