added table for player dataset

--- a/DSCI Group 11 project.ipynb
+++ b/DSCI Group 11 project.ipynb
@@ -22,7 +22,18 @@
     "- `played_hours` -- double, total time in hours a user has been on the server\n",
     "- `name` -- character, user's name\n",
     "- `gender` -- character, user's gender\n",
-    "- `Age` -- double, user's age."
+    "- `Age` -- double, user's age.\n",
+    "\n",
+    "Table 1.1:\n",
+    "| Variable | Type | Meaning |  |\n",
+    "|---|---|---|---|\n",
+    "experience | chr | experience level of player | \"Pro\", \"Veteran\", \"Regular\", \"Amateur\", \"Beginner\" |\n",
+    "subscribe | lgl| player is subscribed to newsletter or not | TRUE or FALSE |\n",
+    "hashedEmail | chr | player email as identifier | hashed for anonymity\n",
+    "played_hours | dbl | total hours played in game |\n",
+    "name | chr | player name |\n",
+    "gender | chr | player gender | Male, Female, Non-binary, Two-Spirited, Agender, Other, Prefer not to say |\n",
+    "Age | dbl | player age | 9 - 58 |"
    ]
   },
   {
