tuning plot observations and data wrangling
Added initial data wrangling steps and tuning plot observations.

--- a/DSCI Group 11 project.ipynb
+++ b/DSCI Group 11 project.ipynb
@@ -2097,6 +2097,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b3885703-b21b-4f2d-92bc-e1464bc65344",
+   "metadata": {},
+   "source": [
+    "### Method and Results:\n",
+    "*Data Wrangling:*\n",
+    "\n",
+    "- Removed rows with missing values\n",
+    "- Converted “subscribe” into a binary factor\n",
+    "- Converted “experience” into an ordered factor\n",
+    "- Standardized age predictor during modelling\n",
+    "- Upsampled to create a 1:1 between True and False for subscribe after the first KNN classification models were created\n",
+    "- The KNN Classification model was used\n",
+    "\n",
+    "We used three models for forward selection comparison\n",
+    "- Age only\n",
+    "- Experience only\n",
+    "- Age and Experience\n",
+    "\n",
+    "We tuned k-values from 1 to 100\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b58f96ff-347b-4363-bdf4-c06604973228",
    "metadata": {},
    "source": [
