Tuning Results Push
Last commit did not push tuning results

--- a/DSCI Group 11 project.ipynb
+++ b/DSCI Group 11 project.ipynb
@@ -2107,15 +2107,15 @@
     "- Converted “subscribe” into a binary factor\n",
     "- Converted “experience” into an ordered factor\n",
     "- Standardized age predictor during modelling\n",
-    "- Upsampled to create a 1:1 between True and False for subscribe after the first KNN classification models were created\n",
     "- The KNN Classification model was used\n",
+    "- Upsampled to create a 1:1 between True and False for subscribe after the first KNN classification models were created\n",
     "\n",
     "We used three models for forward selection comparison\n",
     "- Age only\n",
     "- Experience only\n",
     "- Age and Experience\n",
     "\n",
-    "We tuned k-values from 1 to 100\n"
+    "We tuned k-values from 1 to 100"
    ]
   },
   {
@@ -3209,6 +3209,34 @@
     "plot_grid(age_tune_plot,\n",
     "          experience_tune_plot,\n",
     "          both_tune_plot, ncol = 1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5fd9135-1d9f-4ffd-ab05-3b8f90d47abd",
+   "metadata": {},
+   "source": [
+    "### Tuning Results\n",
+    "*Age Only Plot:*\n",
+    "- Accuracy peaks at K = 7 - 13\n",
+    "- As K increases past 13, accuracy seems to drop, and larger K values make the values too averaged.\n",
+    "- As K increases past 25, accuracy flattens out all the way to K = 100, indicating the model is underfitting.\n",
+    "- Age does not seem to separate subscribers from non-subscribers meaningfully\n",
+    "\n",
+    "*Experience Only Plot:*\n",
+    "- Accuracy higher than the Age Only Plot\n",
+    "- Accuracy peaks at K = 22-27\n",
+    "- As K increases past 27, accuracy drops, and larger K values make the value too averaged\n",
+    "- As K increases past 64, accuracy flattens out all the way to K = 100, indicating the model is underfitting.\n",
+    "- Experience seems to be strongly related to subscription behaviour\n",
+    "\n",
+    "*Age and Experience Plot:*\n",
+    "\n",
+    "- Highest overall accuracy value\n",
+    "- Accuracy peaks at K = 7-10\n",
+    "- As K increases past 10, accuracy drops, and larger K values make the value too averaged\n",
+    "- As K increases past 19, accuracy flattens out all the way to K = 100, indicating the model is underfitting.\n",
+    "- Combined both predictors to improve performance\n"
    ]
   },
   {
