Checked off some requirements from the checklist
Added some writing to explain things still required on the checklist.

--- a/DSCI Group 11 project.ipynb
+++ b/DSCI Group 11 project.ipynb
@@ -103,7 +103,7 @@
    "id": "f6ad9e44-727c-4465-8a67-b4bbbd2a5d5f",
    "metadata": {},
    "source": [
-    "Through a url to the dataset in the Github repository, the `players.csv` dataset is loaded. The dataset also contains NA values which are removed, and the `subscribe` and `experience` variables are converted into factors."
+    "Through a url to the dataset in the Github repository, the `players.csv` dataset is loaded. The dataset also contains NA values which are removed, and the `subscribe` and `experience` variables are converted into factors. We converted experience into an ordered factor because "
    ]
   },
   {
@@ -5713,7 +5713,7 @@
    "id": "c68e2574-b649-4bca-ae77-56cebbb2445e",
    "metadata": {},
    "source": [
-    "The accuracy of the upsampled model (0.612) is lower than the accuracy of the original model (0.735) which in general implies it is worse."
+    "The accuracy of the upsampled model (0.612) is lower than the accuracy of the original model (0.735) which in general implies it is worse. This makes sense as we trained the model on 50/50 subscription, but the testing data was 73/27."
    ]
   },
   {
@@ -5946,11 +5946,11 @@
     "- We found that `Experience` and `Age` can seemingly predict newsletter subscription. We found that using both `Experience` and `Age` is the most accurate, followed by `Experience` alone, and then `Age` alone. However, after being upsampled, `Age` is around the same as `Experience`, both having abyssmally low accuracies of around 55%.\n",
     "\n",
     "*Is this what we expected to find?:*\n",
-    "- This is expected, as in our individual project, visualizations showed that different `Experience` levels had very similar subscription proportions, meaning not much predictability between different experience levels. `Age` also seems pretty weak as a predictor, with a seemingly pretty weak relation with subscription.\n",
+    "- This is expected, as in our individual project, visualizations showed that different `Experience` levels had very similar subscription proportions, meaning not much predictability between different experience levels. `Age` also seems pretty weak as a predictor, with a seemingly pretty weak relation with subscription. The data given was also pretty poor, with a small sample size and a bad imbalance affecting results.\n",
     "\n",
     "*Discuss what impact such findings could have:*\n",
     "- Advertisers can use this information to cater to a targeted age or gaming experience audience for Minecraft-related material.\n",
-    "- New studies can go more in-depth at the relation between Age and Experience level\n",
+    "- New studies can go more in-depth into the relationship between Age and Experience level\n",
     "\n",
     "*Discuss what future questions this could lead to:*\n",
     "- Can `gender` or `played_hours` also predict newsletter subscription?"
