Grammar, spelling, and addition writing
Grammar check before adding additional writing.

--- a/DSCI Group 11 project.ipynb
+++ b/DSCI Group 11 project.ipynb
@@ -103,7 +103,7 @@
    "id": "f6ad9e44-727c-4465-8a67-b4bbbd2a5d5f",
    "metadata": {},
    "source": [
-    "Through a url to the dataset in the Github repository, the `players.csv` dataset is loaded. The dataset also contains NA values which are removed, and the `subscribe` and `experience` variables are converted into factors. We converted experience into an ordered factor because "
+    "Through a url to the dataset in the Github repository, the `players.csv` dataset is loaded. The dataset also contains NA values which are removed, and the `subscribe` and `experience` variables are converted into factors. We converted `experience` into an ordered factor because K-NN Classification requires numeric inputs."
    ]
   },
   {
@@ -2753,7 +2753,7 @@
    "id": "b58f96ff-347b-4363-bdf4-c06604973228",
    "metadata": {},
    "source": [
-    "#### Trainng and Testing Split and 5-fold Data Separation"
+    "#### Training and Testing Split and 5-fold Data Separation"
    ]
   },
   {
@@ -4014,7 +4014,7 @@
    "id": "a22c0367-5c97-4b1c-b6f7-247f5277c8a3",
    "metadata": {},
    "source": [
-    "#### Proportion of Subcribe Values in `player_test`"
+    "#### Proportion of Subscribe Values in `player_test`"
    ]
   },
   {
@@ -4239,7 +4239,7 @@
    "id": "6b915d26-c757-48a4-a25e-c29d534400d2",
    "metadata": {},
    "source": [
-    "The recall is fairly high, however \"predicting\" all *TRUE* would actually yeild a better recall, since every *TRUE* value would be correctly predicted. In terms of precision, this is were the model is slightly better than just predicting *TRUE*. Based on the fact that the precision is higher than the proportion of *TRUE* values, it implies that the model had some correct *FALSE* predictions."
+    "The recall is fairly high, however, \"predicting\" all *TRUE* would actually yield a better recall, since every *TRUE* value would be correctly predicted. In terms of precision, this is where the model is slightly better than just predicting *TRUE*. Based on the fact that the precision is higher than the proportion of *TRUE* values, it implies that the model had some correct *FALSE* predictions."
    ]
   },
   {
@@ -4372,7 +4372,7 @@
    "id": "53d5c450-1026-4378-ae0f-ec3b53bcda3b",
    "metadata": {},
    "source": [
-    "From the confusion matrix in table 5, it can be seen that *TRUE* was predicted 45 out of 49 times; however, of the 45 predictions, only 34 where correct. *FALSE* was predicted only 4 times, and only 2 of those were correct. The bias to mostly predicting *TRUE* is most likely due to the imbalance of *TRUE* and *FALSE* values in `subscribe` which can be addressed through upsampling. Additionally, overall there are few observations in the dataset which limits how well the model can be trained."
+    "From the confusion matrix in Table 5, it can be seen that *TRUE* was predicted 45 out of 49 times; however, of the 45 predictions, only 34 were correct. *FALSE* was predicted only 4 times, and only 2 of those were correct. The bias to mostly predicting *TRUE* is most likely due to the imbalance of *TRUE* and *FALSE* values in `subscribe`, which can be addressed through upsampling. Additionally, overall, there are a few observations in the dataset which limit how well the model can be trained."
    ]
   },
   {
@@ -4388,7 +4388,7 @@
    "id": "09009ec5-8b58-44fe-91b7-4e17da6d7029",
    "metadata": {},
    "source": [
-    "Set the seed to ensure reproducablity, then created a recipe to upsample and the training dataset, before preping and baking it to the training dataset to make a 1:1 ratio of *TRUE* and *FALSE*. Then created the 5 fold separation with the upsampled data."
+    "Set the seed to ensure reproducibility, then created a recipe to upsample and the training dataset, before prepping and baking it to the training dataset to make a 1:1 ratio of *TRUE* and *FALSE*. Then created the 5-fold separation with the upsampled data."
    ]
   },
   {
@@ -4420,7 +4420,7 @@
    "id": "78faa2fe-cfa3-4428-bf09-4895f70150b8",
    "metadata": {},
    "source": [
-    "Same process as with the original model, expect the upsampled training dataset is used."
+    "Same process as with the original model, except the upsampled training dataset is used."
    ]
   },
   {
@@ -4474,7 +4474,7 @@
    "id": "31f93a6f-46cd-4a8c-a112-525d2ebbced3",
    "metadata": {},
    "source": [
-    "Same process as with the original model, expect the upsampled training dataset is used."
+    "Same process as with the original model, except the upsampled training dataset is used."
    ]
   },
   {
@@ -5565,7 +5565,7 @@
    "id": "991739e0-7e49-4b76-8180-bd682c836005",
    "metadata": {},
    "source": [
-    "After upsampling, our predictions differ a bit. Both predictors seem pretty weak, only being about 50-60% accurate. However, using both predictors gives us the highest accuracy of around 61% at K = 15, showing that the predictors do seem to have partial relation to subscription. Perhaps if the sample size was larger, we can confidently determine whether these variables are strong predictors or not."
+    "After upsampling, our predictions differ a bit. Both predictors seem pretty weak, only being about 50-60% accurate. However, using both predictors gives us the highest accuracy of around 61% at K = 15, showing that the predictors do seem to have a partial relation to subscription. Perhaps if the sample size were larger, we could confidently determine whether these variables are strong predictors or not."
    ]
   },
   {
@@ -5599,7 +5599,7 @@
    "id": "9e20ab6b-4506-4fc7-8fe3-4becfdf443a2",
    "metadata": {},
    "source": [
-    "Although K = 15 has the highest accuracy for this model, as can be seen in figure 10, it is located at a large spike with the surronding K values' accuracy being quite lower; inidcating it is not a reliable choice and may not perform as well on other data, therefore the being a suboptimal choice. The highest peak with the least variation before and after the point is the optimal K value to select, and from figure 10, that value is K = 21 since the 4 nearest points only change a maximum of ~0.01. Due to this reasoning, K = 21 will be used in the upsampled model."
+    "Although K = 15 has the highest accuracy for this model, as can be seen in Figure 10, it is located at a large spike with the surrounding K values' accuracy being quite lower, indicating it is not a reliable choice and may not perform as well on other data, therefore being a suboptimal choice. The highest peak with the least variation before and after the point is the optimal K value to select, and from Figure 10, that value is K = 21 since the 4 nearest points only change a maximum of ~0.01. Due to this reasoning, K = 21 will be used in the upsampled model."
    ]
   },
   {
@@ -5615,7 +5615,7 @@
    "id": "7e255f61-57e6-4a0d-814c-f73ea5beb6d6",
    "metadata": {},
    "source": [
-    "Created a K-NN classification model using 21 neighbors, then along with the recipe using `Age` and `experience` predictors from the upsampled training data, fit it to the upsampled training data. That model was then used to predict the `subscribe` values in the original `player_test` data."
+    "Created a K-NN classification model using 21 neighbors, then, along with the recipe using `Age` and `experience` predictors from the upsampled training data, fit it to the upsampled training data. That model was then used to predict the `subscribe` values in the original `player_test` data."
    ]
   },
   {
@@ -5713,7 +5713,7 @@
    "id": "c68e2574-b649-4bca-ae77-56cebbb2445e",
    "metadata": {},
    "source": [
-    "The accuracy of the upsampled model (0.612) is lower than the accuracy of the original model (0.735) which in general implies it is worse. This makes sense as we trained the model on 50/50 subscription, but the testing data was 73/27."
+    "The accuracy of the upsampled model (0.612) is lower than the accuracy of the original model (0.735), which in general implies it is worse. This makes sense as we trained the model on a 50/50 subscription, but the testing data was 73/27."
    ]
   },
   {
@@ -5798,7 +5798,7 @@
    "id": "45e98d46-d2d9-425b-a79e-3ab00057bd13",
    "metadata": {},
    "source": [
-    "From table 8, it can be seen that the precision for *TRUE* of the upsampled model (0.815) is higher than the original model (0.756), meaning it predicted *TRUE* when the actual value was *FALSE* fewer times. In contrast, recall is lower since the upsampled model correctly predicted *TRUE* fewer times."
+    "From Table 8, it can be seen that the precision for *TRUE* of the upsampled model (0.815) is higher than the original model (0.756), meaning it predicted *TRUE* when the actual value was *FALSE* fewer times. In contrast, recall is lower since the upsampled model correctly predicted *TRUE* fewer times."
    ]
   },
   {
@@ -5883,7 +5883,7 @@
    "id": "0b49e852-00ea-4bf8-9112-dbe443c6bd61",
    "metadata": {},
    "source": [
-    "*FALSE* was predicted for *TRUE* values more times than in the original model, leading to a lower precision (shown in table 9). Recall however, is significantly better, indicating this model is better at correctly predicting if a player will not subscribe."
+    "*FALSE* was predicted for *TRUE* values more times than in the original model, leading to a lower precision (shown in Table 9). Recall, however, is significantly better, indicating this model is better at correctly predicting if a player will not subscribe."
    ]
   },
   {
@@ -5932,7 +5932,7 @@
    "id": "02eae182-6e88-408e-abc9-7540a126d727",
    "metadata": {},
    "source": [
-    "As seen in table 10, the upsampled model predicted *TRUE* 27 out of 49 times. Of those 27 *TRUE* predictions, 22 were correct, and of its 22 *False* predictions, 8 were correct. This model had much more distribution to its predictions as opposed to the original model mostly predicting *TRUE*."
+    "As seen in Table 10, the upsampled model predicted *TRUE* 27 out of 49 times. Of those 27 *TRUE* predictions, 22 were correct, and of its 22 *False* predictions, 8 were correct. This model had much more distribution to its predictions as opposed to the original model mostly predicting *TRUE*."
    ]
   },
   {
@@ -5946,7 +5946,7 @@
     "- We found that `Experience` and `Age` can seemingly predict newsletter subscription. We found that using both `Experience` and `Age` is the most accurate, followed by `Experience` alone, and then `Age` alone. However, after being upsampled, `Age` is around the same as `Experience`, both having abyssmally low accuracies of around 55%.\n",
     "\n",
     "*Is this what we expected to find?:*\n",
-    "- This is expected, as in our individual project, visualizations showed that different `Experience` levels had very similar subscription proportions, meaning not much predictability between different experience levels. `Age` also seems pretty weak as a predictor, with a seemingly pretty weak relation with subscription. The data given was also pretty poor, with a small sample size and a bad imbalance affecting results.\n",
+    "- This is expected, as in our individual project, visualizations showed that different `Experience` levels had very similar subscription proportions, meaning not much predictability between different experience levels. `Age` also seems pretty weak as a predictor, with a seemingly pretty weak relation with subscription. The data given was also pretty poor, with a small sample size and a bad imbalance affecting the results.\n",
     "\n",
     "*Discuss what impact such findings could have:*\n",
     "- Advertisers can use this information to cater to a targeted age or gaming experience audience for Minecraft-related material.\n",
