KNN Classification - why we use it
Added why we use KNN Classification under K-NN Classification Tuning Models

--- a/DSCI Group 11 project.ipynb
+++ b/DSCI Group 11 project.ipynb
@@ -2826,7 +2826,7 @@
    "id": "fe29ffe9-5453-472e-9edf-04244138d1b2",
    "metadata": {},
    "source": [
-    "Individual recipes were created for `Age`, `experience` and `Age` + `experience`, where the `Age` predictor was stardardized for each recipe it is present in. These recipes were used as a manual forward selection process to determine the best combination of the the two variables to be used in the final classification model. A tuning model was also created and used along with the recipes and odd K values from 1 to 75 to determine the resulting accuracy via cross validation at each K value based on each recipe."
+    "We use K-NN Classification because it is a simple and effective way to predict categorical outcomes based on patterns in the data. Using it will allow us to find out whether `Age` and `experience` could meaningfully distinguish between subscribers and non-subscribers. Individual recipes were created for `Age`, `experience` and `Age` + `experience`, where the `Age` predictor was stardardized for each recipe it is present in. These recipes were used as a manual forward selection process to determine the best combination of the the two variables to be used in the final classification model. A tuning model was also created and used along with the recipes and odd K values from 1 to 75 to determine the resulting accuracy via cross validation at each K value based on each recipe."
    ]
   },
   {
